FBTest enable disabled test and port couple of fixes from 1.12

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -117,13 +117,12 @@ var testList = [
     {group: "console",            uri: "console/3663/issue3663.js",               desc: "too much recursion when logging array contains itself", testPage: "console/3663/issue3663.html"},
     {group: "console",            uri: "console/5135/issue5135.js",               desc: "Display window.postMessage() calls in console", testPage: "console/5135/issue5135.html"},
     {group: "console",            uri: "console/5655/issue5655.js",               desc: "console panel width empty elements", testPage: "console/5655/issue5655.html"},
-    // Moved into known failures.
-    //{group: "console",            uri: "console/5945/issue5945.js",               desc: "Show source link for CSS errors", testPage: "console/5945/issue5945.html"},
+    {group: "console",            uri: "console/5945/issue5945.js",               desc: "Show source link for CSS errors", testPage: "console/5945/issue5945.html"},
     {group: "console",            uri: "console/6104/issue6104.js",               desc: "Firebug should display DOMTokenList content", testPage: "console/6104/issue6104.html"},
     {group: "console",            uri: "console/5786/issue5786.js",               desc: "Show array-like objects differently than actual arrays", testPage: "console/5786/issue5786.html"},
     {group: "console",            uri: "console/6116/issue6116.js",               desc: "undefined values are ignored in string formatting of console.log", testPage: "console/6116/issue6116.html"},
     {group: "console/spy",        uri: "console/spy/2285/issue2285.js",           desc: "support for content-type: multipart/x-mixed-replace", testPage: "console/spy/2285/issue2285.html" },
-    //{group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
+    {group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
     {group: "console/spy",        uri: "console/spy/2712/issue2712.js",           desc: "Gmail has network connections that report 200 Aborted", testPage: "console/spy/2712/issue2712.html" },
     {group: "console/spy",        uri: "console/spy/2868/issue2868.js",           desc: "ajax response is not shown in the answer tab", testPage: "console/spy/2868/issue2868.html" },
     {group: "console/spy",        uri: "console/spy/4085/issue4085.js",           desc: "Errors inside an XmlHttpRequest.onReadyStateChange still fail silently", testPage: "console/spy/4085/issue4085.html" },
@@ -259,12 +258,12 @@ var testList = [
     {group: "script",             uri: "script/3400/issue3400.js",                desc: "Issue 3400: Debugger buttons not visible when long stack trace", testPage: "script/3400/issue3400.html"},
     {group: "script",             uri: "script/3402/issue3402.js",                desc: "Issue 3402: Can't create/remove a breakpoint", testPage: "script/3402/issue3402.html"},
     {group: "script",             uri: "script/3918/AsyncJSD.js",                 desc: "Async JSD for FF4.0", testPage: "script/3918/AsyncJSDPage.html"},
-    //{group: "script",             uri: "script/3985/issue3985.js",                desc: "Can't break on code inserted twice using iframes, in one iframe", testPage: "script/3985/issue3985.html"},
+    {group: "script",             uri: "script/3985/issue3985.js",                desc: "Can't break on code inserted twice using iframes, in one iframe", testPage: "script/3985/issue3985.html"},
     {group: "script",             uri: "script/4213/issue4213.js",                desc: "Script panel's location button is not updated", testPage: "script/4213/issue4213.html"},
     //{group: "script",             uri: "script/4724/issue4724.js",                desc: "&quot;Disable Breakpoint&quot; is not checked on disabled breakpoints", testPage: "script/4724/issue4724.html"},
     {group: "script",             uri: "script/4816/issue4816.js",                desc: "Script panel claims No JavaScript when it means you're stopped on a breakpoint on some other tab", testPage: "script/4816/issue4816.html"},
     {group: "script",             uri: "script/4818/issue4818.js",                desc: "frame.eval fails for everthing but the newest frame of the stack", testPage: "script/4818/issue4818.html"},
-    //{group: "script",             uri: "script/4932/issue4932.js",                desc: "The Script panel shows No Javascript on this page even if they are scripts within an iframe", testPage: "script/4932/issue4932.html"},
+    {group: "script",             uri: "script/4932/issue4932.js",                desc: "The Script panel shows No Javascript on this page even if they are scripts within an iframe", testPage: "script/4932/issue4932.html"},
     {group: "script/breakpoints", uri: "script/breakpoints/4854/issue4854.js",    desc: "Issue 4854: XHR breakpoints can't be removed from Breakpoints side panel", testPage: "script/breakpoints/4854/issue4854.html"},
     {group: "script/breakpoints", uri: "script/breakpoints/4889/issue4889.js",    desc: "Issue 4889: Folding for breakpoint categories", testPage: "script/breakpoints/4889/issue4889.html"},
     {group: "script/breakpoints", uri: "script/breakpoints/5525/issue5525.js",    desc: "Setting error breakpoints causes error in Breakpoints side panel", testPage: "script/breakpoints/5525/issue5525.html"},
@@ -332,14 +331,13 @@ var testList = [
     {group: "net",                uri: "net/4439/issue4439.js",                   desc: "Net Tab GET and POST responses empty when response's Content-Type is text/json", testPage: "net/4439/issue4439.html" },
     {group: "net",                uri: "net/4689/issue4689.js",                   desc: "Add option to copy parts of JSON data", testPage: "net/4689/issue4689.html" },
     {group: "net",                uri: "net/4805/issue4805.js",                   desc: "Distinguish or Highlight HTTPS protocol requests in Net panel", testPage: "net/4805/issue4805.html" },
-    //{group: "net",                uri: "net/4905/issue4905.js",                   desc: "Show the \"Connection\" header in the network/headers part", testPage: "net/4905/issue4905.html" },
+    {group: "net",                uri: "net/4905/issue4905.js",                   desc: "Show the \"Connection\" header in the network/headers part", testPage: "net/4905/issue4905.html" },
     {group: "net",                uri: "net/5004/issue5004.js",                   desc: "Only raw http post request parameters view", testPage: "net/5004/issue5004.html" },
     {group: "net",                uri: "net/5007/issue5007.js",                   desc: "Headers from POST request body are not displayed anymore", testPage: "net/5007/issue5007.html" },
     {group: "net",                uri: "net/5324/issue5324.js",                   desc: "SPDY support in the Net panel", testPage: "net/5324/issue5324.html" },
     {group: "net",                uri: "net/5592/issue5592.js",                   desc: "Add option to copy request parameters", testPage: "net/5592/issue5592.html" },
     {group: "net",                uri: "net/5714/issue5714.js",                   desc: "Can't resend requests", testPage: "net/5714/issue5714.html" },
-    // Moved into known failures.
-    //{group: "net",                uri: "net/5742/issue5742.js",                   desc: "\"(null)\" is added to the XPath string in the tooltip text of an XML response", testPage: "net/5742/issue5742.html" },
+    {group: "net",                uri: "net/5742/issue5742.js",                   desc: "\"(null)\" is added to the XPath string in the tooltip text of an XML response", testPage: "net/5742/issue5742.html" },
     {group: "cookies",            uri: "cookies/general/cookiesPanel.js",         desc: "Existence of cookie panel", testPage: "cookies/general/cookiesPanel.html" },
     {group: "cookies",            uri: "cookies/general/cookieInfo.js",           desc: "Existence of cookie info", testPage: "cookies/general/cookieInfo.php" },
     {group: "cookies",            uri: "cookies/general/clipboard.js",            desc: "Clipboard functionality for the Cookies panel (copy and paste)", testPage: "cookies/general/clipboard.php" },
