--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -157,6 +157,7 @@ var testList = [
     {group: "console/completion", uri: "console/completion/3660/issue3660.js",    desc: "Issue 3660: Implement pageUp/pageDown and mouseWheel for completion list", testPage: "console/completion/3660/issue3660.html" },
     {group: "console/completion", uri: "console/completion/4233/issue4233.js",    desc: "Issue 4233: [Large patch] Better auto-completion", testPage: "console/completion/4233/issue4233.html"},
     {group: "console/completion", uri: "console/completion/5006/issue5006.js",    desc: "Issue 5006: Switching panels does not correctly set the command line auto-completer", testPage: "console/completion/5006/issue5006.html"},
+    {group: "console/completion", uri: "console/completion/5416/issue5416.js",    desc: "Issue 5416: Auto-completion for Command Line API", testPage: "console/completion/5416/issue5416.html"},
     {group: "console/completion", uri: "console/completion/5493/issue5493.js",    desc: "Issue 5493: Case-insensitive auto-completion", testPage: "console/completion/5493/issue5493.html"},
     {group: "commandLine/api",    uri: "commandLine/api/api.js",                  desc: "Verify command line APIs.", testPage: "commandLine/api/api.html" },
     {group: "commandLine/api",    uri: "commandLine/api/$x.js",                   desc: "Verify command line $x API.", testPage: "commandLine/api/$x.html" },
