--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -233,6 +233,7 @@ var testList = [
     {group: "css",                uri: "css/4460/issue4460.js",                   desc: "Add CSS3 box-sizing property to Layout side panel", testPage: "css/4460/issue4460.html"},
     {group: "css",                uri: "css/4543/issue4543.js",                   desc: "Don't jump to next CSS property value's inline editor, if a semicolon is entered inside a string", testPage: "css/4543/issue4543.html"},
     {group: "css",                uri: "css/4683/issue4683.js",                   desc: "Font preview on mouseover", testPage: "css/4683/issue4683.html"},
+    {group: "css",                uri: "css/4893/issue4893.js",                   desc: "CSS panel doesn't display contents of CSS file after reload", testPage: "css/4893/issue4893.html"},
     {group: "css",                uri: "css/5000/issue5000.js",                   desc: "Add option to delete CSS rule", testPage: "css/5000/issue5000.html"},
     {group: "css",                uri: "css/5177/issue5177.js",                   desc: "Allow colors to be changed using Up/Down keys", testPage: "css/5177/issue5177.html"},
     {group: "css",                uri: "css/5262/issue5262.js",                   desc: "Show @charset rules inside CSS panel", testPage: "css/5262/issue5262.html"},
@@ -243,7 +244,7 @@ var testList = [
     {group: "css",                uri: "css/5644/issue5644.js",                   desc: "Editing a disabled property makes another", testPage: "css/5644/issue5644.html"},
     {group: "css",                uri: "css/5956/issue5956.js",                   desc: "Allow copying single CSS properties", testPage: "css/5956/issue5956.html"},
     {group: "css",                uri: "css/6282/issue6282.js",                   desc: "CSS panel fails on interpreting @page", testPage: "css/6282/issue6282.html"},
-    {group: "css",                uri: "css/4893/issue4893.js",                   desc: "CSS panel doesn't display contents of CSS file after reload", testPage: "css/4893/issue4893.html"},
+    {group: "css",                uri: "css/6405/issue6405.js",                   desc: "\"Get Matching Elements\" must not be displayed for @-rules", testPage: "css/6405/issue6405.html"},
     {group: "css/computed",       uri: "css/computed/3207/issue3207.js",          desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/computed/3207/issue3207.html"},
     {group: "css/computed",       uri: "css/computed/4132/issue4132.js",          desc: "Only show applied styles in Computed side panel", testPage: "css/computed/4132/issue4132.html"},
     {group: "css/computed",       uri: "css/computed/5449/issue5449.js",          desc: "Show infotips in Computed side panel", testPage: "css/computed/5449/issue5449.html"},
