Properly include CM Files and display default (fixed) JS text

--- a/extension/content/firebug/panel.html
+++ b/extension/content/firebug/panel.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="chrome://firebug/skin/panel.css" type="text/css"/>
     <link rel="stylesheet" href="chrome://firebug/skin/codemirror.css" type="text/css"/>
+    <link rel="stylesheet" href="chrome://firebug/skin/codemirror-firebug.css" type="text/css"/>
 </head>
 <body role="application">
 <div class="disabledPanelNode" role="progressbar"></div>
