Updated FBTest for issue 1738 in regard of the changes made for issue 6422

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -295,7 +295,7 @@ var testList = [
     {group: "dom",                uri: "dom/breakpoints/breakOnGlobalProperty.js",desc: "Break on global property change", testPage: "dom/breakpoints/breakOnGlobalProperty.html" },
     {group: "dom",                uri: "dom/breakpoints/breakOnPropertyCB.js",    desc: "Break on property change (Chromebug active)", testPage: "dom/breakpoints/breakOnProperty.html" },
     {group: "dom",                uri: "dom/storage/storage.js",                  desc: "DOM Storage", testPage: "dom/storage/storage.html" },
-    {group: "dom",                uri: "dom/1738/1738.js",                        desc: "Editing DOM values", testPage: "dom/1738/main.html" },
+    {group: "dom",                uri: "dom/1738/issue1738.js",                   desc: "Properties that don't just have getters must not be displayed as such", testPage: "dom/1738/issue1738.html" },
     {group: "dom",                uri: "dom/2558/issue2558.js",                   desc: "Issue 2558: Function arguments not expandable in watch panel even though the object is array-like", testPage: "dom/2558/issue2558.html" },
     {group: "dom",                uri: "dom/2772/issue2772.js",                   desc: "Issue 2772: DOM panel on reload no longer selects previous selected node.", testPage: "dom/2772/issue2772.html" },
     {group: "dom",                uri: "dom/3122/issue3122.js",                   desc: "Issue 3122: Catch variables are not listed in the watch panel on break ('err' expr in the watch panel).", testPage: "dom/3122/issue3122.html" },
