FBTest for issue 6432 (Long string properties don't allow to set a breakpoint for them) http://code.google.com/p/fbug/issues/detail?id=6432

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -292,6 +292,7 @@ var testList = [
     {group: "script/watch",       uri: "script/watch/5336/issue5336.js",          desc: "HTMLCollection object is undefined in the Script panel", testPage: "script/watch/5336/issue5336.html"},
     {group: "script/watch",       uri: "script/watch/5639/issue5639.js",          desc: "Allow deleting all watch expressions at once", testPage: "script/watch/5639/issue5639.html"},
     {group: "dom",                uri: "dom/attributes/attributes.js",            desc: "Better DOM representation for element attributes", testPage: "dom/attributes/attributes.html" },
+    {group: "dom",                uri: "dom/breakpoints/6432/issue6432.js",       desc: "Long string properties don't allow to set a breakpoint for them", testPage: "dom/breakpoints/6432/issue6432.html" },
     {group: "dom",                uri: "dom/breakpoints/breakOnProperty.js",      desc: "Break on property change", testPage: "dom/breakpoints/breakOnProperty.html" },
     {group: "dom",                uri: "dom/breakpoints/breakOnGlobalProperty.js",desc: "Break on global property change", testPage: "dom/breakpoints/breakOnGlobalProperty.html" },
     {group: "dom",                uri: "dom/breakpoints/breakOnPropertyCB.js",    desc: "Break on property change (Chromebug active)", testPage: "dom/breakpoints/breakOnProperty.html" },
