FBTest for issue 6438 (Escaping percentage sign in console.log() junks the rest of the arguments) http://code.google.com/p/fbug/issues/detail?id=6438

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -133,6 +133,7 @@ var testList = [
     {group: "console/spy",        uri: "console/spy/4171/issue4171.js",           desc: "Expanding an XMLHttpRequest in Console tab before it ends makes JSON tab disappear", testPage: "console/spy/4171/issue4171.html" },
     {group: "console/spy",        uri: "console/spy/5049/issue5049.js",           desc: "onreadystatechange fails for back-to-back XMLHTTP requests", testPage: "console/spy/5049/issue5049.html" },
     {group: "console/spy",        uri: "console/spy/4009/issue4009.js",           desc: "XHR messages are different in the Net and Console panel", testPage: "console/spy/4009/issue4009.html" },
+    {group: "console/api",        uri: "console/api/6438/issue6438.js",           desc: "Escaping percentage sign in console.log() junks the rest of the arguments", testPage: "console/api/6438/issue6438.html"},
     {group: "console/api",        uri: "console/api/assert.js",                   desc: "Test for console.assert API.", testPage: "console/api/assert.html" },
     {group: "console/api",        uri: "console/api/clear.js",                    desc: "Test for console.clear API.", testPage: "console/api/clear.html" },
     {group: "console/api",        uri: "console/api/count.js",                    desc: "Test for console.count API.", testPage: "console/api/count.html" },
