--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -123,7 +123,6 @@ var testList = [
     {group: "console",            uri: "console/5786/issue5786.js",               desc: "Show array-like objects differently than actual arrays", testPage: "console/5786/issue5786.html"},
     {group: "console",            uri: "console/6116/issue6116.js",               desc: "undefined values are ignored in string formatting of console.log", testPage: "console/6116/issue6116.html"},
     {group: "console",            uri: "console/6356/issue6356.js",               desc: "Value attribute doesn't show up in console: follow-ups", testPage: "console/6356/issue6356.html"},
-    {group: "console",            uri: "console/6439/issue6439.js",               desc: "Consider precision for Console API %f log pattern", testPage: "console/6439/issue6439.html"},
     {group: "console/spy",        uri: "console/spy/2285/issue2285.js",           desc: "support for content-type: multipart/x-mixed-replace", testPage: "console/spy/2285/issue2285.html" },
     {group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
     {group: "console/spy",        uri: "console/spy/2712/issue2712.js",           desc: "Gmail has network connections that report 200 Aborted", testPage: "console/spy/2712/issue2712.html" },
@@ -134,6 +133,7 @@ var testList = [
     {group: "console/spy",        uri: "console/spy/5049/issue5049.js",           desc: "onreadystatechange fails for back-to-back XMLHTTP requests", testPage: "console/spy/5049/issue5049.html" },
     {group: "console/spy",        uri: "console/spy/4009/issue4009.js",           desc: "XHR messages are different in the Net and Console panel", testPage: "console/spy/4009/issue4009.html" },
     {group: "console/api",        uri: "console/api/6438/issue6438.js",           desc: "Escaping percentage sign in console.log() junks the rest of the arguments", testPage: "console/api/6438/issue6438.html"},
+    {group: "console/api",        uri: "console/api/6439/issue6439.js",           desc: "Consider precision for Console API %f log pattern", testPage: "console/api/6439/issue6439.html"},
     {group: "console/api",        uri: "console/api/assert.js",                   desc: "Test for console.assert API.", testPage: "console/api/assert.html" },
     {group: "console/api",        uri: "console/api/clear.js",                    desc: "Test for console.clear API.", testPage: "console/api/clear.html" },
     {group: "console/api",        uri: "console/api/count.js",                    desc: "Test for console.count API.", testPage: "console/api/count.html" },
