--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -69,6 +69,7 @@ var testList = [
     {group: "search",             uri: "search/2886/issue2886.js",                desc: "JavaScript search field doesn't find some code", testPage: "search/2886/issue2886.html" },
     {group: "search",             uri: "search/4602/issue4602.js",                desc: "Transfer text selection to Search Field when it's focussed using the keyboard shortcut", testPage: "search/4602/issue4602.html" },
     {group: "search",             uri: "search/4603/issue4603.js",                desc: "Add clear button to the Search Field", testPage: "search/4603/issue4603.html" },
+    {group: "search",             uri: "search/6435/issue6435.js",                desc: "Create FBTest that covers DOM panel search", testPage: "search/6435/issue6435.html" },
     {group: "shortcuts",          uri: "shortcuts/firebug.js",                    desc: "Firebug shortcuts (F12, Shift+F12, Ctrl+F12)", testPage: "shortcuts/firebug.html" },
     {group: "shortcuts",          uri: "shortcuts/inspector.js",                  desc: "Inspector shortcut (Ctrl+Shift+C)", testPage: "shortcuts/inspector.html" },
     {group: "examples",           uri: "examples/exampleCommandLine1.js",         desc: "Example test showing how to test the command line.", testPage: "examples/exampleCommandLine1.html" },
