FBTest: automated tests for issue 4979

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -162,6 +162,11 @@ var testList = [
     {group: "console/completion", uri: "console/completion/5006/issue5006.js",    desc: "Issue 5006: Switching panels does not correctly set the command line auto-completer", testPage: "console/completion/5006/issue5006.html"},
     {group: "console/completion", uri: "console/completion/5416/issue5416.js",    desc: "Issue 5416: Auto-completion for Command Line API", testPage: "console/completion/5416/issue5416.html"},
     {group: "console/completion", uri: "console/completion/5493/issue5493.js",    desc: "Issue 5493: Case-insensitive auto-completion", testPage: "console/completion/5493/issue5493.html"},
+    {group: "console/grouping",   uri: "console/grouping/simpleLogs.js",          desc: "Group console messages: simple logs", testPage: "console/grouping/simpleLogs.html"},
+    {group: "console/grouping",   uri: "console/grouping/profiler.js",            desc: "Group console messages: profiler", testPage: "console/grouping/profiler.html"},
+    {group: "console/grouping",   uri: "console/grouping/cookies.js",             desc: "Group console messages: cookies", testPage: "console/grouping/cookies.php"},
+    {group: "console/grouping",   uri: "console/grouping/xhr.js",                 desc: "Group console messages: xhr", testPage: "console/grouping/xhr.html"},
+    {group: "console/grouping",   uri: "console/grouping/groups.js",              desc: "Group console messages: groups", testPage: "console/grouping/groups.html"},
     {group: "commandLine/api",    uri: "commandLine/api/api.js",                  desc: "Verify command line APIs.", testPage: "commandLine/api/api.html" },
     {group: "commandLine/api",    uri: "commandLine/api/$x.js",                   desc: "Verify command line $x API.", testPage: "commandLine/api/$x.html" },
     {group: "commandLine/api",    uri: "commandLine/api/cd.js",                   desc: "Verify command line cd() method.", testPage: "commandLine/api/cd.html" },
