--- a/tests/content/console/grouping/simpleLogs.html
+++ b/tests/content/console/grouping/simpleLogs.html
@@ -28,8 +28,6 @@
             console.warn("warning"); console.warn("warning");
             console.error("error"); console.error("error");
 
-            console.log(document.head.firstChild); console.log(document.head.firstChild);
-
             cleanUp();
         }
 
@@ -46,17 +44,19 @@
             console.log("null"); console.log(null); console.log(undefined);
 
             console.log(document); console.log(document);
+            console.log(document.head.firstChild); console.log(document.head.firstChild);
 
             var arr = [1];
             console.log(arr); arr[0] = 2; console.log(arr);
 
             logTable(); logTable();
-            logTime(); logTime();
 
+            /* This is currently not supported by Firebug
             var th = function() { throw 0; };
             var throwy1 = Proxy.create({getOwnPropertyDescriptor: th, getPropertyDescriptor: th, getOwnPropertyNames: th, getPropertyNames: th}, null);
             var throwy2 = Proxy.create({getOwnPropertyDescriptor: th, getPropertyDescriptor: th, getOwnPropertyNames: th, getPropertyNames: th}, null);
             console.log(throwy1); console.log(throwy2);
+            */
 
             appendChildAndLog(document.createTextNode("a")); appendChildAndLog(document.createTextNode("a"));
 
@@ -80,12 +80,6 @@
                 {firstName: "John", lastName: "Travers"}
             ];
             console.table(objects);
-        }
-
-        function logTime()
-        {
-            console.time("Timer");
-            console.timeEnd("Timer");
         }
 
         function appendChildAndLog(ch)
