Issue 6455: Create FBTest that covers Cookies panel search

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -72,6 +72,7 @@ var testList = [
     {group: "search",             uri: "search/6435/issue6435.js",                desc: "Create FBTest that covers DOM panel search", testPage: "search/6435/issue6435.html" },
     {group: "search",             uri: "search/6454/issue6454.js",                desc: "Create FBTest that covers HTML panel search", testPage: "search/6454/issue6454.html" },
     {group: "search",             uri: "search/6453/issue6453.js",                desc: "Create FBTest that covers Console panel search", testPage: "search/6453/issue6453.html" },
+    {group: "search",             uri: "search/6455/issue6455.js",                desc: "Create FBTest that covers Cookies panel search", testPage: "search/6455/issue6455.php" },
     {group: "shortcuts",          uri: "shortcuts/firebug.js",                    desc: "Firebug shortcuts (F12, Shift+F12, Ctrl+F12)", testPage: "shortcuts/firebug.html" },
     {group: "shortcuts",          uri: "shortcuts/inspector.js",                  desc: "Inspector shortcut (Ctrl+Shift+C)", testPage: "shortcuts/inspector.html" },
     {group: "examples",           uri: "examples/exampleCommandLine1.js",         desc: "Example test showing how to test the command line.", testPage: "examples/exampleCommandLine1.html" },
