FBTest for issue 6054 (Colors are always copied in rgb() format) http://code.google.com/p/fbug/issues/detail?id=6054

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -254,6 +254,7 @@ var testList = [
     {group: "css",                uri: "css/5469/issue5469.js",                   desc: "Add units when changing the length '0' with up/down keys", testPage: "css/5469/issue5469.html"},
     {group: "css",                uri: "css/5644/issue5644.js",                   desc: "Editing a disabled property makes another", testPage: "css/5644/issue5644.html"},
     {group: "css",                uri: "css/5956/issue5956.js",                   desc: "Allow copying single CSS properties", testPage: "css/5956/issue5956.html"},
+    {group: "css",                uri: "css/6054/issue6054.js",                   desc: "Colors are always copied in rgb() format", testPage: "css/6054/issue6054.html"},
     {group: "css",                uri: "css/6282/issue6282.js",                   desc: "CSS panel fails on interpreting @page", testPage: "css/6282/issue6282.html"},
     {group: "css",                uri: "css/6405/issue6405.js",                   desc: "\"Get Matching Elements\" must not be displayed for @-rules", testPage: "css/6405/issue6405.html"},
     {group: "css/computed",       uri: "css/computed/3207/issue3207.js",          desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/computed/3207/issue3207.html"},
