FBTests for issue 1717 (CSS Panel does not have @media UI) http://code.google.com/p/fbug/issues/detail?id=1717

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -261,6 +261,8 @@ var testList = [
     {group: "css/computed",       uri: "css/computed/4132/issue4132.js",          desc: "Only show applied styles in Computed side panel", testPage: "css/computed/4132/issue4132.html"},
     {group: "css/computed",       uri: "css/computed/5449/issue5449.js",          desc: "Show infotips in Computed side panel", testPage: "css/computed/5449/issue5449.html"},
     {group: "css/computed",       uri: "css/computed/5451/issue5451.js",          desc: "Persist scrolling in Computed side panel", testPage: "css/computed/5451/issue5451.html"},
+    {group: "css/nestedRules",    uri: "css/nestedRules/atMediaAutocomplete.js",  desc: "@media rules auto-completion", testPage: "css/nestedRules/atMediaAutocomplete.html"},
+    {group: "css/nestedRules",    uri: "css/nestedRules/atMediaStyleEditing.js",  desc: "@media rules style editing", testPage: "css/nestedRules/atMediaStyleEditing.html"},
     {group: "script",             uri: "script/debuggerKeyword/testDriver1.6.js", desc: "Break on debugger keyword in various contexts.", testPage: "script/debuggerKeyword/testPage.html"},
     {group: "script",             uri: "script/dynamicScriptEval/test1.js",       desc: "Dynamic script evaluation", testPage: "script/dynamicScriptEval/test1.html"},
     {group: "script",             uri: "script/refreshHaltedDebugger.js",         desc: "Refreshing page when FB is halted breaks debugger.", testPage: "script/refreshHaltedDebugger.html" },
