Remove a test that causes Firefox crash (bug 821733)

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -178,7 +178,7 @@ var testList = [
     {group: "commandLine",        uri: "commandLine/4218/issue4218.js",           desc: "Issue 4218: Command line history doesn't reset when entering duplicate command", testPage: "commandLine/4218/issue4218.html"},
     {group: "commandLine",        uri: "commandLine/4234/issue4234.js",           desc: "Issue 4234: Object with array property showing as blank", testPage: "commandLine/4234/issue4234.html"},
     {group: "commandLine",        uri: "commandLine/4391/issue4391.js",           desc: "Issue 4234: Can not use $ for jQuery in console", testPage: "commandLine/4391/issue4391.html"},
-    {group: "commandLine",        uri: "commandLine/4434/issue4434.js",           desc: "Issue 4434: autocomplete in console debugger does not recognize variables in catch block", testPage: "commandLine/4434/issue4434.html"},
+    // Bug 821733 {group: "commandLine",        uri: "commandLine/4434/issue4434.js",           desc: "Issue 4434: autocomplete in console debugger does not recognize variables in catch block", testPage: "commandLine/4434/issue4434.html"},
     {group: "commandLine",        uri: "commandLine/4453/issue4453.js",           desc: "Issue 4453: Content of the command line can't be cleared.", testPage: "commandLine/4453/issue4453.html"},
     {group: "commandLine",        uri: "commandLine/5042/issue5042.js",           desc: "Issue 5042: Command Line should not prevent tabbing out when empty", testPage: "commandLine/5042/issue5042.html"},
     {group: "commandLine",        uri: "commandLine/5130/issue5130.js",           desc: "Array indices are sorted alphabetically instead of numerically", testPage: "commandLine/5130/issue5130.html"},
