FBTest: new FBTest example (set a breakpoint)

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -81,6 +81,7 @@ var testList = [
     {group: "examples",           uri: "examples/exampleLib1.js",                 desc: "Example test for a library function." },
     {group: "examples",           uri: "examples/exampleNet1.js",                 desc: "Example test for the Net panel", testPage: "examples/exampleNet1.html" },
     {group: "examples",           uri: "examples/exampleScript1.js",              desc: "Example test for the Script panel", testPage: "examples/exampleScript1.html" },
+    {group: "examples",           uri: "examples/exampleScript2.js",              desc: "Example test for the Script panel", testPage: "examples/exampleScript2.html" },
     {group: "examples",           uri: "examples/exampleTaskList1.js",            desc: "Example test showing how to use FBTest.TaskList API." },
     {group: "examples",           uri: "examples/exampleTest.js",                 desc: "Simple test example." },
     {group: "console",            uri: "console/breakOnError/breakOnError.js",    desc: "Test for breakOnError feature.", testPage: "console/breakOnError/breakOnError.html"},
