FBTest: Issue 6519: Store the result of the last command line evaluation in st

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -180,6 +180,7 @@ var testList = [
     {group: "commandLine/api",    uri: "commandLine/api/help.js",                 desc: "Verify command line help API", testPage: "commandLine/api/help.html"},
     {group: "commandLine/api",    uri: "commandLine/api/dir.js",                  desc: "Verify command line dir API.", testPage: "commandLine/api/dir.html" },
     {group: "commandLine/api",    uri: "commandLine/api/dirxml.js",               desc: "Verify command line dirxml API.", testPage: "commandLine/api/dirxml.html" },
+    {group: "commandLine/api",    uri: "commandLine/api/$_.js",                   desc: "Verify command line $_ API.", testPage: "commandLine/api/$_.html" },
     {group: "commandLine",        uri: "commandLine/dom.js",                      desc: "Verify command line DOM access.", testPage: "commandLine/dom.html" },
     {group: "commandLine",        uri: "commandLine/objects.js",                  desc: "Page objects used on the command line", testPage: "commandLine/objects.html"},
     {group: "commandLine",        uri: "commandLine/2934/issue2934.js",           desc: "1.6a7 console and auto-complete (needs 'window.' prefix)", testPage: "commandLine/2934/issue2934.html" },
