--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -203,6 +203,7 @@ var testList = [
     {group: "commandLine",        uri: "commandLine/5878/issue5878.js",           desc: "Issue 5878: proposal for a command line method: include(url)", testPage: "commandLine/5878/issue5878.html"},
     {group: "commandLine",        uri: "commandLine/5951/issue5951.js",           desc: "Title of array-like objects should be clickable", testPage: "commandLine/5951/issue5951.html"},
     {group: "commandLine",        uri: "commandLine/6291/issue6291.js",           desc: "use evalInGlobalWithBindings() instead of eval()", testPage: "commandLine/6291/issue6291.html"},
+    {group: "commandLine",        uri: "commandLine/6422/issue6422.js",           desc: "Add a right click option for accessing objects in the Command Line", testPage: "commandLine/6422/issue6422.html"},
     {group: "html",               uri: "html/breakpoints/breakOnElement.js",      desc: "Mutation breakpoints test", testPage: "html/breakpoints/breakOnElement.html"},
     {group: "html",               uri: "html/breakpoints/breakOnElementCB.js",    desc: "Mutation breakpoints test (Chromebug active)", testPage: "html/breakpoints/breakOnElement.html"},
     {group: "html",               uri: "html/breakpoints/breakOnNext.js",         desc: "Mutation breakpoints test", testPage: "html/breakpoints/breakOnNext.html"},
