--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -178,12 +178,12 @@ var testList = [
     {group: "commandLine",        uri: "commandLine/4218/issue4218.js",           desc: "Issue 4218: Command line history doesn't reset when entering duplicate command", testPage: "commandLine/4218/issue4218.html"},
     {group: "commandLine",        uri: "commandLine/4234/issue4234.js",           desc: "Issue 4234: Object with array property showing as blank", testPage: "commandLine/4234/issue4234.html"},
     {group: "commandLine",        uri: "commandLine/4391/issue4391.js",           desc: "Issue 4234: Can not use $ for jQuery in console", testPage: "commandLine/4391/issue4391.html"},
-    // Bug 880697 {group: "commandLine",        uri: "commandLine/4434/issue4434.js",           desc: "Issue 4434: autocomplete in console debugger does not recognize variables in catch block", testPage: "commandLine/4434/issue4434.html"},
+    {group: "commandLine",        uri: "commandLine/4434/issue4434.js",           desc: "Issue 4434: autocomplete in console debugger does not recognize variables in catch block", testPage: "commandLine/4434/issue4434.html"},
     {group: "commandLine",        uri: "commandLine/4453/issue4453.js",           desc: "Issue 4453: Content of the command line can't be cleared.", testPage: "commandLine/4453/issue4453.html"},
     {group: "commandLine",        uri: "commandLine/5042/issue5042.js",           desc: "Issue 5042: Command Line should not prevent tabbing out when empty", testPage: "commandLine/5042/issue5042.html"},
     {group: "commandLine",        uri: "commandLine/5130/issue5130.js",           desc: "Array indices are sorted alphabetically instead of numerically", testPage: "commandLine/5130/issue5130.html"},
     {group: "commandLine",        uri: "commandLine/5779/issue5779.js",           desc: "Allow to set the root element in $ and $$", testPage: "commandLine/5779/issue5779.html"},
-    // Bug 880697 {group: "commandLine",        uri: "commandLine/5873/issue5873.js",           desc: "Issue 5873: Integrate FireClosure", testPage: "commandLine/5873/issue5873.html"},
+    {group: "commandLine",        uri: "commandLine/5873/issue5873.js",           desc: "Issue 5873: Integrate FireClosure", testPage: "commandLine/5873/issue5873.html"},
     {group: "commandLine",        uri: "commandLine/5878/issue5878.js",           desc: "Issue 5878: proposal for a command line method: include(url)", testPage: "commandLine/5878/issue5878.html"},
     {group: "commandLine",        uri: "commandLine/5951/issue5951.js",           desc: "Title of array-like objects should be clickable", testPage: "commandLine/5951/issue5951.html"},
     {group: "html",               uri: "html/breakpoints/breakOnElement.js",      desc: "Mutation breakpoints test", testPage: "html/breakpoints/breakOnElement.html"},
@@ -252,7 +252,7 @@ var testList = [
     {group: "script",             uri: "script/1575/issue1575Driver.js",          desc: "New watch expression can't be created when breakpoint is active", testPage: "script/1575/issue1575.htm" },
     {group: "script",             uri: "script/2279/errorBreakpoints.js",         desc: "Issue 2279; Error Breakpoint can't be toggled off.", testPage: "script/2279/testErrorBreakpoints.html" },
     {group: "script",             uri: "script/2638/issue2638.js",                desc: "Show info popup when hovering a breakpoint / execution indicator icon", testPage: "script/2638/issue2638.html"},
-    // Bug 880697 {group: "script",             uri: "script/2871/issue2871.js",                desc: "Issue 2871: Bug in watching variables defined in a javascript closure prior to function execution", testPage: "script/2871/issue2871.html"},
+    {group: "script",             uri: "script/2871/issue2871.js",                desc: "Issue 2871: Bug in watching variables defined in a javascript closure prior to function execution", testPage: "script/2871/issue2871.html"},
     {group: "script",             uri: "script/3077/issue3077.js",                desc: "Line by line debug stops with window.console.log", testPage: "script/3077/issue3077.html"},
     {group: "script",             uri: "script/3309/issue3309.js",                desc: "Issue3309: Wrong panel message in Script Panel, if page doesn't contain JavaScript", testPage: "script/3309/issue3309.html"},
     {group: "script",             uri: "script/3400/issue3400.js",                desc: "Issue 3400: Debugger buttons not visible when long stack trace", testPage: "script/3400/issue3400.html"},
@@ -262,7 +262,7 @@ var testList = [
     {group: "script",             uri: "script/4213/issue4213.js",                desc: "Script panel's location button is not updated", testPage: "script/4213/issue4213.html"},
     //{group: "script",             uri: "script/4724/issue4724.js",                desc: "&quot;Disable Breakpoint&quot; is not checked on disabled breakpoints", testPage: "script/4724/issue4724.html"},
     {group: "script",             uri: "script/4816/issue4816.js",                desc: "Script panel claims No JavaScript when it means you're stopped on a breakpoint on some other tab", testPage: "script/4816/issue4816.html"},
-    // Bug 880697 {group: "script",             uri: "script/4818/issue4818.js",                desc: "frame.eval fails for everthing but the newest frame of the stack", testPage: "script/4818/issue4818.html"},
+    {group: "script",             uri: "script/4818/issue4818.js",                desc: "frame.eval fails for everthing but the newest frame of the stack", testPage: "script/4818/issue4818.html"},
     {group: "script",             uri: "script/4932/issue4932.js",                desc: "The Script panel shows No Javascript on this page even if they are scripts within an iframe", testPage: "script/4932/issue4932.html"},
     {group: "script/breakpoints", uri: "script/breakpoints/4854/issue4854.js",    desc: "Issue 4854: XHR breakpoints can't be removed from Breakpoints side panel", testPage: "script/breakpoints/4854/issue4854.html"},
     {group: "script/breakpoints", uri: "script/breakpoints/4889/issue4889.js",    desc: "Issue 4889: Folding for breakpoint categories", testPage: "script/breakpoints/4889/issue4889.html"},
@@ -281,7 +281,7 @@ var testList = [
     {group: "script/stepping",    uri: "script/stepping/4839/issue4839.js",       desc: "Script execution stopped at wrong line", testPage: "script/stepping/4839/issue4839.html"},
     {group: "script/stepping",    uri: "script/stepping/4880/issue4880.js",       desc: "Step into function with frames, does not work", testPage: "script/stepping/4880/issue4880.html"},
     {group: "script/watch",       uri: "script/watch/5009/issue5009.js",          desc: "Watch side panel shows \"Command line closed?\"", testPage: "script/watch/5009/issue5009.html"},
-    // Bug 880697 {group: "script/watch",       uri: "script/watch/5019/issue5019.js",          desc: "Editing a variable in the Watch window doesn't work", testPage: "script/watch/5019/issue5019.html"},
+    {group: "script/watch",       uri: "script/watch/5019/issue5019.js",          desc: "Editing a variable in the Watch window doesn't work", testPage: "script/watch/5019/issue5019.html"},
     {group: "script/watch",       uri: "script/watch/5336/issue5336.js",          desc: "HTMLCollection object is undefined in the Script panel", testPage: "script/watch/5336/issue5336.html"},
     {group: "script/watch",       uri: "script/watch/5639/issue5639.js",          desc: "Allow deleting all watch expressions at once", testPage: "script/watch/5639/issue5639.html"},
     {group: "dom",                uri: "dom/attributes/attributes.js",            desc: "Better DOM representation for element attributes", testPage: "dom/attributes/attributes.html" },
