--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -173,6 +173,7 @@ var testList = [
     {group: "console/grouping",   uri: "console/grouping/cookies.js",             desc: "Group console messages: cookies", testPage: "console/grouping/cookies.php"},
     {group: "console/grouping",   uri: "console/grouping/xhr.js",                 desc: "Group console messages: xhr", testPage: "console/grouping/xhr.html"},
     {group: "console/grouping",   uri: "console/grouping/groups.js",              desc: "Group console messages: groups", testPage: "console/grouping/groups.html"},
+    {group: "console/errors",     uri: "console/errors/6523/issue6523.js",        desc: "   JSD2: Show Stack Trace With Errors", testPage: "console/errors/6523/issue6523.html"},
     {group: "commandLine/api",    uri: "commandLine/api/api.js",                  desc: "Verify command line APIs.", testPage: "commandLine/api/api.html" },
     {group: "commandLine/api",    uri: "commandLine/api/$x.js",                   desc: "Verify command line $x API.", testPage: "commandLine/api/$x.html" },
     {group: "commandLine/api",    uri: "commandLine/api/cd.js",                   desc: "Verify command line cd() method.", testPage: "commandLine/api/cd.html" },
