Issue 6547: Add test case for max-age == 0

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -383,6 +383,7 @@ var testList = [
     {group: "cookies",            uri: "cookies/5560/issue5560.js",               desc: "Add column for raw value", testPage: "cookies/5560/issue5560.php" },
     {group: "cookies",            uri: "cookies/5834/issue5834.js",               desc: "Add infotip for cookie size", testPage: "cookies/5834/issue5834.php" },
     {group: "cookies",            uri: "cookies/6535/issue6535.js",               desc: "Show Max-Age for cookies in Net panel", testPage: "cookies/6535/issue6535.php" },
+    {group: "cookies",            uri: "cookies/6547/issue6547.js",               desc: "Show cookie Max-Age when attribute is <= 0", testPage: "cookies/6547/issue6547.php" },
 ];
 </script>
 
