--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -260,6 +260,7 @@ var testList = [
     {group: "css",                uri: "css/6054/issue6054.js",                   desc: "Colors are always copied in rgb() format", testPage: "css/6054/issue6054.html"},
     {group: "css",                uri: "css/6282/issue6282.js",                   desc: "CSS panel fails on interpreting @page", testPage: "css/6282/issue6282.html"},
     {group: "css",                uri: "css/6405/issue6405.js",                   desc: "\"Get Matching Elements\" must not be displayed for @-rules", testPage: "css/6405/issue6405.html"},
+    {group: "css",                uri: "css/6531/issue6531.js",                   desc: "Location Menu is not displayed when there are just CSS files in frames", testPage: "css/6531/issue6531.html"},
     {group: "css/computed",       uri: "css/computed/3207/issue3207.js",          desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/computed/3207/issue3207.html"},
     {group: "css/computed",       uri: "css/computed/4132/issue4132.js",          desc: "Only show applied styles in Computed side panel", testPage: "css/computed/4132/issue4132.html"},
     {group: "css/computed",       uri: "css/computed/5449/issue5449.js",          desc: "Show infotips in Computed side panel", testPage: "css/computed/5449/issue5449.html"},
