FBTest for issue 6546 (Auto-focus Command Line when switching to the Console panel) http://code.google.com/p/fbug/issues/detail?id=6546

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -128,6 +128,7 @@ var testList = [
     {group: "console",            uri: "console/6116/issue6116.js",               desc: "undefined values are ignored in string formatting of console.log", testPage: "console/6116/issue6116.html"},
     {group: "console",            uri: "console/6356/issue6356.js",               desc: "Value attribute doesn't show up in console: follow-ups", testPage: "console/6356/issue6356.html"},
     {group: "console",            uri: "console/6402/issue6402.js",               desc: "Don't abuse the debugger service for injecting \"console\"", testPage: "console/6402/issue6402.html"},
+    {group: "console",            uri: "console/6546/issue6546.js",               desc: "Auto-focus Command Line when switching to the Console panel", testPage: "console/6546/issue6546.html"},
     {group: "console/spy",        uri: "console/spy/2285/issue2285.js",           desc: "support for content-type: multipart/x-mixed-replace", testPage: "console/spy/2285/issue2285.html" },
     {group: "console/spy",        uri: "console/spy/2462/issue2462.js",           desc: "The firebug console still shows the xhr in progress if you abort it (via request.abort()) ", testPage: "console/spy/2462/issue2462.html" },
     {group: "console/spy",        uri: "console/spy/2712/issue2712.js",           desc: "Gmail has network connections that report 200 Aborted", testPage: "console/spy/2712/issue2712.html" },
