--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -268,6 +268,7 @@ var testList = [
     {group: "css/computed",       uri: "css/computed/5451/issue5451.js",          desc: "Persist scrolling in Computed side panel", testPage: "css/computed/5451/issue5451.html"},
     {group: "css/nestedRules",    uri: "css/nestedRules/atMediaAutocomplete.js",  desc: "@media rules auto-completion", testPage: "css/nestedRules/atMediaAutocomplete.html"},
     {group: "css/nestedRules",    uri: "css/nestedRules/atMediaStyleEditing.js",  desc: "@media rules style editing", testPage: "css/nestedRules/atMediaStyleEditing.html"},
+    {group: "css/selectors",      uri: "css/selectors/6540/issue6540.js",         desc: "Dynamically update selector groups when framed elements change", testPage: "css/selectors/6540/issue6540.html"},
     {group: "script",             uri: "script/debuggerKeyword/testDriver1.6.js", desc: "Break on debugger keyword in various contexts.", testPage: "script/debuggerKeyword/testPage.html"},
     {group: "script",             uri: "script/dynamicScriptEval/test1.js",       desc: "Dynamic script evaluation", testPage: "script/dynamicScriptEval/test1.html"},
     {group: "script",             uri: "script/refreshHaltedDebugger.js",         desc: "Refreshing page when FB is halted breaks debugger.", testPage: "script/refreshHaltedDebugger.html" },
