FBTest for Str.formatTime()

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -42,6 +42,7 @@ var testList = [
     {group: "lib",                uri: "lib/parseURLParams.js",                   desc: "Verify FBL.parseURLParams method" },
     {group: "lib",                uri: "lib/storageService.js",                   desc: "Verify modules/storageService" },
     {group: "lib",                uri: "lib/textSearch.js",                       desc: "Verify FBL.TextSearch", testPage: "lib/textSearch.htm" },
+    {group: "lib/string",         uri: "lib/string/formatTime.js",                desc: "Verify Str.formatTime() is working as expected" },
     {group: "chrome",             uri: "chrome/1883/issue1883.js",                desc: "domplate.insertRows properties" },
     {group: "domplate",           uri: "domplate/issue4425.js",                   desc: "Better support for Domplate templates inheritance" },
     {group: "firebug",            uri: "firebug/activeContextAfterReload.js",     desc: "Reloading a FF tab with Firebug open." },
