FBTest for issue 6522 (Implement the getEventListeners command line API)

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -206,6 +206,7 @@ var testList = [
     {group: "commandLine",        uri: "commandLine/5951/issue5951.js",           desc: "Title of array-like objects should be clickable", testPage: "commandLine/5951/issue5951.html"},
     {group: "commandLine",        uri: "commandLine/6291/issue6291.js",           desc: "use evalInGlobalWithBindings() instead of eval()", testPage: "commandLine/6291/issue6291.html"},
     {group: "commandLine",        uri: "commandLine/6422/issue6422.js",           desc: "Add a right click option for accessing objects in the Command Line", testPage: "commandLine/6422/issue6422.html"},
+    {group: "commandLine",        uri: "commandLine/6522/issue6522.js",           desc: "Issue 6522: Implement the getEventListeners command line API", testPage: "commandLine/6522/issue6522.html"},
     {group: "commandLine",        uri: "commandLine/6525/issue6525.js",           desc: "Expose non-chrome objects for 'Use in Command Line' in Net and Cookies panels", testPage: "commandLine/6525/issue6525.php"},
     {group: "html",               uri: "html/breakpoints/breakOnElement.js",      desc: "Mutation breakpoints test", testPage: "html/breakpoints/breakOnElement.html"},
     {group: "html",               uri: "html/breakpoints/breakOnElementCB.js",    desc: "Mutation breakpoints test (Chromebug active)", testPage: "html/breakpoints/breakOnElement.html"},
