Move net/176 to a new subfolder 'filter'

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -335,7 +335,6 @@ var testList = [
     {group: "net",                uri: "net/breakpoints/breakOnXHRCB.js",         desc: "XHR Conditional Breakpoints (Chromebug active)", testPage: "net/breakpoints/breakOnXHR.html" },
     {group: "net",                uri: "net/listeners/netInfoBodyListener-1.6.js",desc: "netInfoBody listener test", testPage: "net/listeners/netInfoBodyListener-1.6.html" },
     {group: "net",                uri: "net/url-params/test.js",                  desc: "Encoded ampersands '&amp' and the Params tab.", testPage: "net/url-params/test.html" },
-    {group: "net",                uri: "net/176/issue176.js",                     desc: "Issue 176: net flash tab not recognising flv files", testPage: "net/176/issue176.html" },
     {group: "net",                uri: "net/369/issue369.1.6.js",                 desc: "Issue 369: Inspect JSON data in HTTP responses", testPage: "net/369/issue369.1.6.htm" },
     {group: "net",                uri: "net/372/issue372-1.6.js",                 desc: "Issue 372: Outgoing XML isn't displayed in 'post'-tab", testPage: "net/372/issue372-1.6.html" },
     {group: "net",                uri: "net/601/issue601.js",                     desc: "Issue 601: XHR in console shows stale/cached output", testPage: "net/601/issue601.html"},
@@ -372,6 +371,7 @@ var testList = [
     {group: "net",                uri: "net/5324/issue5324.js",                   desc: "SPDY support in the Net panel", testPage: "net/5324/issue5324.html" },
     {group: "net",                uri: "net/5592/issue5592.js",                   desc: "Add option to copy request parameters", testPage: "net/5592/issue5592.html" },
     {group: "net",                uri: "net/5742/issue5742.js",                   desc: "\"(null)\" is added to the XPath string in the tooltip text of an XML response", testPage: "net/5742/issue5742.html" },
+    {group: "net/filter",         uri: "net/filter/176/issue176.js",              desc: "Issue 176: net flash tab not recognising flv files", testPage: "net/filter/176/issue176.html" },
     {group: "cookies",            uri: "cookies/general/cookiesPanel.js",         desc: "Existence of cookie panel", testPage: "cookies/general/cookiesPanel.html" },
     {group: "cookies",            uri: "cookies/general/cookieInfo.js",           desc: "Existence of cookie info", testPage: "cookies/general/cookieInfo.php" },
     {group: "cookies",            uri: "cookies/general/clipboard.js",            desc: "Clipboard functionality for the Cookies panel (copy and paste)", testPage: "cookies/general/clipboard.php" },
