--- a/tests/content/net/filter/176/issue176.html
+++ b/tests/content/net/filter/176/issue176.html
@@ -3,7 +3,7 @@
     <head>
         <title>Issue 176: net flash tab not recognising flv files</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <link href="../../_common/testcase.css" type="text/css" rel="stylesheet"/>
+        <link href="../../../_common/testcase.css" type="text/css" rel="stylesheet"/>
         <script type="text/javascript">
         function runTest()
         {
