FBTest: test for issue 6474

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -372,6 +372,7 @@ var testList = [
     {group: "net",                uri: "net/5592/issue5592.js",                   desc: "Add option to copy request parameters", testPage: "net/5592/issue5592.html" },
     {group: "net",                uri: "net/5742/issue5742.js",                   desc: "\"(null)\" is added to the XPath string in the tooltip text of an XML response", testPage: "net/5742/issue5742.html" },
     {group: "net/filter",         uri: "net/filter/176/issue176.js",              desc: "Issue 176: net flash tab not recognising flv files", testPage: "net/filter/176/issue176.html" },
+    {group: "net/filter",         uri: "net/filter/6474/issue6474.js",            desc: "Fonts filter should also work for fonts with incorrect MIME type", testPage: "net/filter/6474/issue6474.html" },
     {group: "cookies",            uri: "cookies/general/cookiesPanel.js",         desc: "Existence of cookie panel", testPage: "cookies/general/cookiesPanel.html" },
     {group: "cookies",            uri: "cookies/general/cookieInfo.js",           desc: "Existence of cookie info", testPage: "cookies/general/cookieInfo.php" },
     {group: "cookies",            uri: "cookies/general/clipboard.js",            desc: "Clipboard functionality for the Cookies panel (copy and paste)", testPage: "cookies/general/clipboard.php" },
